[package]
edition = '2018'
name = 'pallet-commodities'
version = '1.0.0'
authors = ['Dan Forbes <dan@parity.io>']
license = 'Unlicense'
description = 'A unique asset (NFT) interface and a Substrate FRAME implementation optimized for commodity assets.'
homepage = 'https://github.com/danforbes/pallet-nft'
repository = 'https://github.com/danforbes/pallet-nft'
readme = 'README.md'
keywords = ['substrate', 'frame', 'nft', 'blockchain', 'asset']
categories = ['cryptography::cryptocurrencies', 'data-structures', 'no-std']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", optional = true }

# Substrate dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', tag = 'monthly-2021-08', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', tag = 'monthly-2021-08', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = '4.0.0-dev', tag = 'monthly-2021-08', default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", version = '4.0.0-dev', tag = 'monthly-2021-08', default-features = false }


[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', tag = 'monthly-2021-08', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', tag = 'monthly-2021-08', default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
